MODBULKOPS-65 - TD - BulkOps: handling CSV <-> Object exceptions (#101)
* MODBULKOPS-65 - Errors handling